cap width of peers to avoid overflow scrollbars on windows

--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -175,8 +175,6 @@ h2 {
 
 .Clocks {
   margin-top: 16px;
-  max-width: 200px;
-  overflow: scroll;
 }
 .Clocks td.clockPosition {
   text-align: right;
